feat/loginForm feat/toaster

--- a/FRONTEND/survey-microservice/app/globals.css
+++ b/FRONTEND/survey-microservice/app/globals.css
@@ -18,7 +18,7 @@
 
 body {
   color: #faf5ff;
-  background: linear-gradient(to bottom right, #581c87, #a855f7);
+  background: linear-gradient(to bottom right, #3b0764, #6b21a8);
   background-size: cover;
   background-attachment: fixed;
 }
